# bdchecker

./: .gitignore  LICENSE  README.md  README_cn.md  pyinstaller_pkg.bat  pyinstaller_pkg.sh  pypi_build.sh  pyproject.toml  requirements-dev.txt
bdchecker/: __version__.py  checker.py  main.py
bdchecker/command/: check.py  clean.py  gen.py
bdchecker/utils/: const_var.py  log_handle.py  singleton.py
etc/: settings.xml
